styles.css
/* ... */
.probootstrap-section.probootstrap-section-colored p, .probootstrap-section.probootstrap-section-colored-darker p {
  color: rgba(255, 255, 255, 0.7);
}

.probootstrap-section.probootstrap-section-colored a:link, .probootstrap-section.probootstrap-section-colored-darker a:link {
  color: rgba(255, 255, 255, 0.6);
}

.probootstrap-section.probootstrap-section-colored a:hover, .probootstrap-section.probootstrap-section-colored-darker a:hover {
  color: rgba(255, 255, 255, 0.8);
}

.probootstrap-section.probootstrap-section-colored a:visited, .probootstrap-section.probootstrap-section-colored-darker a:visited {
  color: rgba(255, 255, 255, 0.6);
}

.probootstrap-section.probootstrap-section-colored a:active, .probootstrap-section.probootstrap-section-colored-darker a:active {
  color: rgba(255, 255, 255, 0.8);
}

.probootstrap-section.probootstrap-section-colored-darker {
  background: #9BB597;
}

.probootstrap-footer {
  background: #9BB597;
  padding: 70px 0;
  color: rgba(255, 255, 255, 0.5);
}

.probootstrap-footer a {
  color: #ffffff;
  text-decoration: underline;
}

.probootstrap-footer a:hover {
  text-decoration: none;
}

.probootstrap-section-bg {
  background-size: cover;
  background-repeat: no-repeat;
  padding: 7em 0;
  position: relative;
  height: 600px;
}

@media screen and (max-width: 768px) {
  .probootstrap-section-bg {
    padding: 3em 0;
    height: 300px;
  }
}

.probootstrap-section-bg.overlay:before {
  content: "";
  background: rgba(0, 0, 0, 0.2);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.probootstrap-section-bg .probootstrap-heading {
  margin-top: 250px;
}

@media screen and (max-width: 768px) {
  .probootstrap-section-bg .probootstrap-heading {
    margin-top: 50px;
  }
}

.probootstrap-card {
  border: 2px solid #7C9078;
  background: #ffffff;
  padding: 40px;
  color: #000000 !important;
}

@media screen and (max-width: 768px) {
  .probootstrap-card {
    padding: 20px;
  }
}

.probootstrap-card p {
  color: #000000 !important;
}

.probootstrap-form {
  margin-bottom: 0px;
}

.probootstrap-form label {
  font-weight: normal;
}

.probootstrap-form .form-control {
  height: 46px;
  -webkit-box-shadow: none;
  box-shadow: none;
  font-size: 14px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 2px solid #f2f2f2;
}

.probootstrap-form .form-control:active, .probootstrap-form .form-control:focus {
  -webkit-box-shadow: none;
  box-shadow: none;
  border: 2px solid #7C9078;
}

.probootstrap-form .form-group:last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}

.probootstrap-form .form-group label {
  text-transform: uppercase;
  font-size: 13px;
}

.probootstrap-form .form-group .form-field {
  position: relative;
}

.probootstrap-form .form-group .form-field .icon {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 20px;
}

.probootstrap-form .form-group .form-field .form-control {
  padding-right: 50px;
}

.probootstrap-form textarea.form-control {
  height: inherit;
  resize: vertical;
}

.btn-contact img {
  position: relative;
  -webkit-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transition: .3s all ease-out;
  transition: .3s all ease-out;
  top: 0px;
}

.btn-contact:hover img, .btn-contact:focus img {
  opacity: .7;
  -webkit-transform: scale(1);
  transform: scale(1);
  top: -10px;
}

.probootstrap-animate {
  opacity: 0;
  visibility: hidden;
}

/* Flexslider override style */
.slider-height, .flexslider, .flexslider .slides > li {
  height: 60vh;
}

.probootstrap-heading .primary-heading {
  font-family: "Zilla Slab", serif;
  color: #7C9078;
  margin: 0;
  padding: 0;
  font-size: 80px;
}

@media screen and (max-width: 768px) {
  .probootstrap-heading .primary-heading {
    font-size: 70px;
  }
}

.probootstrap-heading .secondary-heading {
  text-transform: uppercase;
  color: #ffffff;
  margin: 0;
  padding: 0;
  letter-spacing: .05em;
  font-size: 50px;
  position: relative;
  top: -50px;
  font-weight: 700;
  line-height: 40px;
}

@media screen and (max-width: 768px) {
  .probootstrap-heading .secondary-heading {
    font-size: 40px;
  }
}

.probootstrap-heading.dark .secondary-heading {
  color: #000000;
}

.probootstrap-heading .seperator {
  display: block;
  margin: 0 auto 10px auto;
  color: #ccc;
  font-weight: 300;
}

.ey-experiences-summary {
  font-family: "Zilla Slab", serif;
  font-size: 26pt;
  font-weight: bold;
  margin-bottom: 30px;
}

.ey-experiences-summary:hover {
  cursor: pointer;
}

.es-experience-detail-img {
  border: 3px solid rgba(0,0,0,1);
  border-radius: 50%;
  max-width: 190px;
  max-height: auto;
}

.es-experience-detail-text {
  text-align: left;
  font-size: 11pt;
}

.es-experience-detail-text-bullet {
  text-align: left;
  font-size: 11pt;
  margin-right: 10px;
}

.es-experience-detail-text-header {
  text-align: left;
  font-size: 14px;
}

.es-experience-img {
  width: 100%;
}

@media (max-width: 992px) {
  .es-experience-detail-text-header {
    text-align: center;
  }

  .es-experience-detail-text {
    margin: 5px 15px 0px 15px;
  }

  .es-experience-img {
    width: 30%;
    margin-bottom: 10px;
  }
}

.es-experience-detail-text-position {
  font-weight: bold;
  font-size: 20px;
}


.probootstrap-section.probootstrap-section-colored-darker p, .ey-registry-experiences-description p {
  color: white;
  margin: 10px auto 20px auto;
}

.flexslider {
  position: relative;
  z-index: 2;
  background: none;
  border: none;
  margin: 0 0 0;
  background: #9BB597;
}

.flexslider .probootstrap-slider-text {
  margin-top: 300px;
}

@media screen and (max-width: 480px) {
  .flexslider .probootstrap-slider-text {
    margin-top: 150px;
  }
}

.flexslider .probootstrap-slider-text .sub-heading {
  font-size: 20px;
  margin-top: -40px;
  color: rgba(255, 255, 255, 0.7);
}

.flexslider .probootstrap-slider-text .sub-heading a {
  color: white;
}
/* ... */

